// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`JSONSchemaViewer - Array type test 0 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        />
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 1 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <ul>
          <li
            data-level="1"
            id="/contains"
          >
            <details>
              <summary>
                <code>
                  items[..., x, ...]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  number
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    number
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        />
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 2 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <ul>
          <li
            data-level="1"
            id="/items"
          >
            <details>
              <summary>
                <code>
                  items[x]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  number
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    number
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        />
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 3 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Length :
            </strong>
             
            <code>
              &gt;= 2
            </code>
             
            <strong>
              AND
            </strong>
             
            <code>
              &lt;= 3
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 4 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <ul>
          <li
            data-level="1"
            id="/contains"
          >
            <details>
              <summary>
                <code>
                  items[..., x, ...]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  integer
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    integer
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Must contain : 
            </strong>
             
            <code>
              at least 2 valid item(s)
            </code>
             
            <strong>
              AND
            </strong>
             
            <code>
              at most 3 valid item(s)
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 5 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <ul>
          <li
            data-level="1"
            id="/prefixItems/0"
          >
            <details>
              <summary>
                <code>
                  items[0]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  number
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    number
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  >
                    The address number
                  </div>
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/prefixItems/1"
          >
            <details>
              <summary>
                <code>
                  items[1]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  >
                    The name of the street
                  </div>
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/prefixItems/2"
          >
            <details>
              <summary>
                <code>
                  items[2]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  >
                    <div>
                      <strong>
                        Possible values :
                      </strong>
                       
                      <ul>
                        <li>
                          <code>
                            Street
                          </code>
                        </li>
                        <li>
                          <code>
                            Avenue
                          </code>
                        </li>
                        <li>
                          <code>
                            Boulevard
                          </code>
                        </li>
                      </ul>
                    </div>
                  </div>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  >
                    The type of street
                  </div>
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/prefixItems/3"
          >
            <details>
              <summary>
                <code>
                  items[3]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  >
                    <div>
                      <strong>
                        Possible values :
                      </strong>
                       
                      <ul>
                        <li>
                          <code>
                            NW
                          </code>
                        </li>
                        <li>
                          <code>
                            NE
                          </code>
                        </li>
                        <li>
                          <code>
                            SW
                          </code>
                        </li>
                        <li>
                          <code>
                            SE
                          </code>
                        </li>
                      </ul>
                    </div>
                  </div>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  >
                    The city quadrant of the address
                  </div>
                </div>
              </div>
            </details>
          </li>
        </ul>
        <ul>
          <li
            data-level="1"
            id="/items"
          >
            <details>
              <summary>
                <code>
                  items[x]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  none
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    none
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  >
                    Always invalid
                  </div>
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            🚨 No extra item(s) are authorized in this array
          </div>
        </div>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          Represent a street address such as ['1600','Pennsylvania','Avenue','NW']
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 6 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Unique items :
            </strong>
             
            <code>
              yes
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 7 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Length :
            </strong>
             
            <code>
              &gt;= 1
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 8 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Length :
            </strong>
             
            <code>
              &lt;= 5
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 9 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Must contain : 
            </strong>
             
            <code>
              at most 3 valid item(s)
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 10 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Must contain : 
            </strong>
             
            <code>
              at least 2 valid item(s)
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 11 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <ul>
          <li
            data-level="1"
            id="/items/0"
          >
            <details>
              <summary>
                <code>
                  items[0]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  integer
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    integer
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/items/1"
          >
            <details>
              <summary>
                <code>
                  items[1]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Length :
            </strong>
             
            <code>
              &gt;= 1
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 12 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <ul>
          <li
            data-level="1"
            id="/prefixItems/0"
          >
            <details>
              <summary>
                <code>
                  items[0]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  number
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    number
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/prefixItems/1"
          >
            <details>
              <summary>
                <code>
                  items[1]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Length :
            </strong>
             
            <code>
              &gt;= 3
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 13 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <ul>
          <li
            data-level="1"
            id="/items"
          >
            <details>
              <summary>
                <code>
                  items[x]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Length :
            </strong>
             
            <code>
              &gt;= 1
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 14 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            🚨 No extra item(s) are authorized in this array
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 15 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <ul>
          <li
            data-level="1"
            id="/items/0"
          >
            <details>
              <summary>
                <code>
                  items[0]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  integer
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    integer
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
          <li
            data-level="1"
            id="/items/1"
          >
            <details>
              <summary>
                <code>
                  items[1]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <ul>
          <li
            data-level="1"
            id="/additionalItems"
          >
            <details>
              <summary>
                <code>
                  items[2,...]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  boolean
                </span>
                 
                <strong>
                  required
                </strong>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    boolean
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Length :
            </strong>
             
            <code>
              &gt;= 2
            </code>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Array type test 16 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          array
        </span>
        <ul>
          <li
            data-level="1"
            id="/prefixItems/0"
          >
            <details>
              <summary>
                <code>
                  items[0]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  string
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    string
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <ul>
          <li
            data-level="1"
            id="/unevaluatedItems"
          >
            <details>
              <summary>
                <code>
                  items[y]
                </code>
                 
                <span
                  style="opacity: 0.6;"
                >
                  number
                </span>
              </summary>
              <div>
                <div>
                  <strong>
                    type
                  </strong>
                   : 
                  <span
                    style="opacity: 0.6;"
                  >
                    number
                  </span>
                  <div
                    style="margin-top: var(--ifm-table-cell-padding);"
                  />
                </div>
              </div>
            </details>
          </li>
        </ul>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        />
      </div>
    </div>
  </details>
</DocumentFragment>
`;
